--- a/Entrega Clase 35/package.json
+++ b/Entrega Clase 35/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "entrega-clase-33",
+  "name": "entrega-clase-35",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "artillery-dev":"",
+    "artillery-prod":""
   },
   "keywords": [],
   "author": "",
@@ -18,16 +20,17 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.2",
+    "express-handlebars": "^7.0.4",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.2",
+    "mongoose": "^7.0.3",
     "mongoose-paginate-v2": "^1.7.1",
-    "nodemon": "^2.0.21",
+    "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "winston": "^3.8.2"
   }
 }
